# wit-bindgen

./: .gitignore  Cargo.toml  README.md  demo.wasm
crates/gen-c/: Cargo.toml
crates/gen-c/src/: lib.rs
crates/gen-core/: Cargo.toml
crates/gen-core/src/: lib.rs
crates/gen-js/: Cargo.toml
crates/gen-js/src/: lib.rs
crates/gen-js/tests/: runtime.rs
crates/gen-markdown/: Cargo.toml
crates/gen-markdown/src/: lib.rs
crates/gen-rust/: Cargo.toml
crates/gen-rust-wasm/: Cargo.toml
crates/gen-rust-wasm/src/: lib.rs
crates/gen-rust/src/: lib.rs
crates/gen-spidermonkey/: Cargo.toml
crates/gen-spidermonkey/src/: lib.rs
crates/gen-wasmtime/: Cargo.toml
crates/gen-wasmtime-py/: Cargo.toml
crates/gen-wasmtime-py/src/: lib.rs
crates/gen-wasmtime-py/tests/: runtime.rs
crates/gen-wasmtime/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/tests/: all.rs
crates/rust-wasm/: Cargo.toml
crates/rust-wasm-impl/: Cargo.toml
crates/rust-wasm-impl/src/: lib.rs
crates/rust-wasm/src/: lib.rs
crates/test-helpers/: Cargo.toml  build.rs
crates/test-helpers/src/: lib.rs
crates/test-modules/: Cargo.toml
crates/test-modules/modules/crates/flags/: Cargo.toml
crates/test-modules/modules/crates/flags-main/: Cargo.toml
crates/test-modules/modules/crates/lists/: Cargo.toml
crates/test-modules/modules/crates/lists-main/: Cargo.toml
crates/test-modules/modules/crates/nested-main/: Cargo.toml
crates/test-modules/modules/crates/nested_a/: Cargo.toml
crates/test-modules/modules/crates/nested_b/: Cargo.toml
crates/test-modules/modules/crates/records/: Cargo.toml
crates/test-modules/modules/crates/records-main/: Cargo.toml
crates/test-modules/modules/crates/resources/: Cargo.toml
crates/test-modules/modules/crates/resources-invalid-main/: Cargo.toml
crates/test-modules/modules/crates/resources-main/: Cargo.toml
crates/test-modules/modules/crates/types/: Cargo.toml
crates/test-modules/modules/crates/types-main/: Cargo.toml
crates/test-modules/modules/crates/variants/: Cargo.toml
crates/test-modules/modules/crates/variants-main/: Cargo.toml
crates/test-modules/src/: lib.rs
crates/test-rust-wasm/: Cargo.toml
crates/wasmlink/: Cargo.toml
crates/wasmlink-cli/: Cargo.toml
crates/wasmlink-cli/src/: lib.rs
crates/wasmlink/demo/markdown/: Cargo.toml
crates/wasmlink/demo/renderer/: Cargo.toml
crates/wasmlink/src/: linker.rs  module.rs  resources.rs
crates/wasmlink/src/adapter/: call.rs
crates/wasmlink/tests/: run.rs
crates/wasmtime-impl/: Cargo.toml
crates/wasmtime-impl/src/: lib.rs
crates/wit-bindgen-demo/: Cargo.toml
crates/wit-bindgen-demo/src/: lib.rs
