[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
name = "wit-bindgen-gen-rust-wasm"
version = "0.1.0"

[lib]
doctest = false
test = false

[dependencies]
cosmian-wit-bindgen-gen-core = {path = '../gen-core', version = '0.1.0'}
heck = "0.3"
structopt = {version = "0.3", default-features = false, optional = true}
wit-bindgen-gen-rust = {path = '../gen-rust', version = '0.1.0'}

[dev-dependencies]
test-helpers = {path = '../test-helpers', features = ['wit-bindgen-gen-rust-wasm']}
wit-bindgen-rust = {path = '../rust-wasm'}

[features]
witx-compat = ['cosmian-wit-bindgen-gen-core/witx-compat']
