[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "wit-bindgen-gen-rust-wasm"
edition = "2018"
license = "Apache-2.0"
name = "cosmian-wit-bindgen-gen-rust-wasm"
version = "0.1.1"

[lib]
doctest = false
test = false

[dependencies]
cosmian-wit-bindgen-gen-core = {path = '../gen-core', version = '0.1.0'}
cosmian-wit-bindgen-gen-rust = {path = '../gen-rust', version = '0.1.0'}
heck = "0.3"
structopt = {version = "0.3", default-features = false, optional = true}

[dev-dependencies]
cosmian-wit-bindgen-rust = {path = '../rust-wasm'}
test-helpers = {path = '../test-helpers', features = ['cosmian-wit-bindgen-gen-rust-wasm']}

[features]
witx-compat = ['cosmian-wit-bindgen-gen-core/witx-compat']
