[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "wit-bindgen rust implementation"
edition = "2018"
license = "Apache-2.0"
name = "wit-bindgen-rust-impl"
version = "0.1.0"

[lib]
doctest = false
proc-macro = true
test = false

[dependencies]
cosmian-wit-bindgen-gen-core = {path = "../gen-core", version = "0.1"}
proc-macro2 = "1.0"
syn = "1.0"
wit-bindgen-gen-rust-wasm = {path = "../gen-rust-wasm", version = "0.1"}

[features]
witx-compat = ['cosmian-wit-bindgen-gen-core/witx-compat']
