[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "cosmian-wit-bindgen-rust"
edition = "2018"
license = "Apache-2.0"
name = "cosmian-wit-bindgen-rust"
version = "0.1.0"

[dependencies]
async-trait = "0.1.51"
bitflags = "1.3"
cosmian-wit-bindgen-rust-impl = {path = "../rust-wasm-impl"}

[features]
witx-compat = ['cosmian-wit-bindgen-rust-impl/witx-compat']
