[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
name = "test-rust-wasm"
publish = false
version = "0.1.0"

[dependencies]
cosmian-wit-bindgen-rust = {path = "../rust-wasm", features = ['witx-compat']}
futures-util = {version = "0.3.17", default-features = true}

[features]
unchecked = []

[[bin]]
name = "smoke"
test = false

[[bin]]
name = "numbers"
test = false

[[bin]]
name = "records"
test = false

[[bin]]
name = "variants"
test = false

[[bin]]
name = "lists"
test = false

[[bin]]
name = "handles"
test = false

[[bin]]
name = "buffers"
test = false

[[bin]]
name = "flavorful"
test = false

[[bin]]
name = "invalid"
test = false

[[bin]]
name = "async_functions"
test = false
