[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
name = "wit-bindgen-wasmtime-impl"
version = "0.1.0"

[lib]
doctest = false
proc-macro = true
test = false

[dependencies]
cosmian-wit-bindgen-gen-core = {path = "../gen-core", version = "0.1"}
proc-macro2 = "1.0"
syn = "1.0"
wit-bindgen-gen-wasmtime = {path = "../gen-wasmtime", version = "0.1"}

[features]
async = []
tracing = []
witx-compat = ['wit-bindgen-gen-wasmtime/witx-compat']
